# LightControlPC

./: .gitignore  CMakeLists.txt  LightControlPC.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  aboutMenu.cpp  aboutMenu.h  qml.qrc
resources/stylesheets/: LightControlPC.qss
